Revert "Fix bug with hot spot overlap (#975)."
This reverts commit 7362f5c948e17370a9368ccc23895dd8a1e16668.

The bug in question was actually already fixed in
5f0a1d8662272cae87ad23d367ab041ca3a2d34a.

--- a/src/css/pannellum.css
+++ b/src/css/pannellum.css
@@ -30,6 +30,7 @@
     position: absolute;
     width: 100%;
     height: 100%;
+    z-index: 1;
 }
 
 .pnlm-grab {
